# Studia-Embed

./: 7seg-2.hex
1 - test/: test.asm  test.hex  test.lst
2 - 7seg/: 7seg.asm  7seg.hex  7seg.lst
3 - 7seg-2/: 7seg-2.asm  7seg-2.lst
4 - timer/: czestotliwosci.ods  timer.asm  timer.hex  timer.lst  timer2.asm  timer2.hex  timer2.lst
5 - 7seg-3 + klawiatura/: 7seg-3.asm  7seg-3.hex  7seg-3.lst  KlawiaturaMatrycowa.asm  KlawiaturaMatrycowa.hex  KlawiaturaMatrycowa.lst  KlawiaturaSekwencyjna.asm  KlawiaturaSekwencyjna.hex  KlawiaturaSekwencyjna.lst
6 - 7seg-4 + odbicia/: 7seg-4.asm  odbicia_stykow.asm
7 - wyswietlacz w C/: test.c  test_delay_z_timerem.c
projekt/: CMakeLists.txt  sdcc-Windows.yaml  zegarek.c
projekt/win/: CMakeLists-Windows.txt  sdcc-Windows.yaml  sdcc_wrapper.bat
